--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js --exec babel-node",
-    "start": "node ./index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
