--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-os",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "nodemon ./index.js --exec babel-node",
     "start": "node src/index.js"
