--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "api-os",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js --exec babel-node",
-    "start": "node src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "start": "node ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
