--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "api-os",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "./index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js",
+    "dev": "nodemon ./index.js",
+    "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
