--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "request-ip": "^3.3.0"
